# Schwanensee

./: .gitignore  CMakeLists.txt  MILESTONES.md  Makefile  README.md  setup.py
doc/: model_creation.puml  model_deployment.puml  model_deployment_strategy.puml  pinn_physic_state.puml  project_planning.puml
example/bumpyFlight/: README.md  logger.py  oscillator_lv2.py
example/lorenz/: lorenz.py  lorenz_lv2.py  lorenz_w_exogenous_stimulus.py  lorenz_w_exogenous_stimulus_lv1.py
example/sine/: sine.py
psai/: psai.py
psai/parser/: python_to_deepxde.py
psai/utils/training/: find_latest_checkpoint.py
schwan/: main.cpp  schwan.py
schwan/utils/default_nn/: default_nn.py
schwan/utils/plot/: flow_analysis.py  phase.py  schwanensee.py
schwan/utils/training/: find_latest_checkpoint.py
src/: deepxde_parser.py  floquet_mode.py  heat.py  keras_to_onnx.py  main.cpp  onnx_to_pytorch.py
src/model/: lorenz_w_exogenous_stimulus.py
src/parser/: opencor_to_python.py  python_to_deepxde.py
